--- a/templates/index.html
+++ b/templates/index.html
@@ -1,135 +1,148 @@
-<!DOCTYPE html >
-<html >
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title> Julius Kimuli Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<head>
-  <title>Julius Kimuli Home Page</title>
-  <meta name="description" content="Julius Kimuli Telecom Engineer" />
-  <meta name="keywords" content="Julius Kimuli Uganda Engineer Telecom" />
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-  
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-    
-    
-    <!-- <link href="/static/assets/css/bootstrap.css" rel="stylesheet"> -->
-    <link href="/static/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- Le styles -->
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
+        background-color: #fff;
+      }
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 800px;
+        background-color: #fff;
+      }
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+         
+      a.links:hover{
+		  color:orange;
+		  text-decoration:none;
+	  }
+	  
+	  p.p_left{
+		  margin-left:200px;
+	  }
+      
+
+     
+    </style>
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/static/assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/assets/ico/apple-touch-icon-57-precomposed.png">
-    
-  
-  
-  <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
-  <script type="text/javascript" src="/static/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-  <script type="text/javascript" src="/static/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-  <link rel="stylesheet" type="text/css" href="/static/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
-  
+    <!-- Fav and touch icons -->
+    <link rel="shortcut icon" href="/static/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
+  </head>
 
-</head>
+  <body>
 
-<body>
-  <div id="container_header"><p>&nbsp;</p></div>
-    <div id="main">
-      <div id="header">
-        <div id="banner"></div>
-        
-      <div id="menubar">
-          <ul id="nav">
-            <li class="selected"><a href="/">Home</a></li>
-            <li><a href="/photos">Gallery</a></li>
-            <li><a href="/career">Career</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li class="last"><a href="/contact">Contacts</a></li>
-          </ul>
+    <div class="container-narrow">
+
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="/photos">Gallery</a></li>
+          <li><a href="/career">Career</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/contacts">Contacts</a></li>
+        </ul>
+        <h3 class="muted">Julius Kimuli</h3>
       </div>
-    </div>
-      
-    <div id="site_content">
-      <div id="content">
-        <div class="clear"></div>
-        <div class="content_item">
-          <div style="width:600px; float:right;margin-top:30px;margin-left:10px;">
-          
-          
-          <img src="/static/images/julio.jpg" width="243" height="143" alt="" class="alignleft border" />
-          
-           <p> I am Julius Kimuli an accomplished telecoms engineering professional with 4+ years experience
-            and advanced problem solving,troubleshooting and fault analysis skills. I have been involved at  all stages of a
-			telecoms network through initial installation and deployment, operations of a live
-			network and major network and software upgrades. Technical proficiencies include...
-            Microwave Backhaul Radio Systems  both PDH and SDH Radio Alcatel-
-			Lucent AWY,MXC and MPR Radio Systems, Nera Evolution Series IP Radio
-			and Nera Interlink SDH Long Haul Radio GSM Radio Access Network Elements including Alcatel-Lucent BTS9100,
-			BSC, GRPS Nodes and Huawei BTS
- 			Huawei PTN Series 1900,950 and 3900
- 			Multi Service SDH provisioning platforms including Alcatel 1642 ADM and
-			1660 ADM
- 			Protocols : Ethernet , TCP/IP, MPLS,ATM
- 			Element and Network Management Systems and DCN
-			Configuration, Rollout,Commissioning,Integration and O&M
- 			WCDMA 3G RAN Systems
- 			
- 			<p> I am currently a Field Operations Engineer at Alcatel-Lucent East Africa, Uganda. More about me at my <a href="http://www.linkedin.com/juliuskimuli">Linkedln Profile</a>
- 			
 
-			<p>
-  			 Though a telecom engineer, I have always been fascinated by computers since my youth and  taught myself the basics of
-			programming during my university years. During my spare time i leverage my software development skillset using open source tools including
-			GNU/Linux,Python,MySQL,Django and web2py and Google App Engine Python</p>
-			
-			<p> When not busy at work, i do some travel and you can access my photos <a href="/photos"> here </a> , relax listening to my music catalogue and spending time with family
-			  
+      <hr>
 
-          
-           
-         </div>
-      
-      
-        <div style="width:250px; float:left; margin-left:20px;margin-top:15px;">
-            <div style="width:200px; float:left;"><h2>Latest Updates</h2></div>
-              <br style="clear:both;" />
-        <h3>June 2012</h3>
-              <div style="width:50px; float:left;"><img src="/static/images/icons/attachment.png" alt="new"/></div>
-              <p> Learning <a href="http://www.python.org">Python</a> &nbsp;&nbsp;
-                  <a href="http://djangoproject.com">Diango Web Framework</a> &nbsp; &nbsp;
-                  <a href="http://code.google.com/appengine">Google App Engine Python</a></p>
-              
-              <div style="width:50px; float:left;"><img src="/static/images/icons/attachment.png" alt="new"/></div>    
-              <p> Just finished taking part in a prototype Online Course from <a href="http://mitx.mit.edu"> MIT </a></p>
-            <div style="width:200px; float:left;"><h2>Useful Links</h2></div>
-              <br style="clear:both;" />
-              
-        <p><img src="/static/images/icons/info.png" alt="info"/><a href="http://www.udacity.com"> Udacity Online University</a></p>
-               
-        <p><img src="/static/images/icons/info.png" alt="info"/><a href="http://news.bbc.co.uk"> BBC World News</a></p>
-               
-        <p><img src="/static/images/icons/info.png" alt="info"/>
-        <a href="http://code.google.com/appengine">Google App Engine</a></p>
+      <div class="row-fluid">
         
-        <p><img src="/static/images/icons/info.png" alt="info"/>
-        <a href="http://www.stumbleupon.com">Discover the web</a></p>
-        
+        <div class="span5">
+            <img src="/static/img/julio.jpg" alt="">
         </div>
-          <br style="clear:both;" />
-    </div>
+        
+        <div class="span7">
+            <h4 class="muted">Welcome to my world!</h4>
+            <p> Hello! Iam Julius Kimuli, telecoms engineer, working with Alcatel-Lucent East Africa. I have spent the last 5 years working on projects for some of the leading Ugandan telecom operators.
+            </p>
+            
+            <p> I am also a budding software and web developer, since discovering and being charmed by the beauty of the Python programming language in 2009!</p>
+            
+            <h3 class="muted"> Favorite programming arsenal</h3>
+            <ul>
+				<li> Python and Django</li>
+				<li> Google App Engine</li>
+				<li> JQuery and HTML5</li>
+				<li> Twitter Bootstrap</li>
+            </ul>
+            
+        </div>
+        
       </div>
-    </div>
+      
+      
+      <br/>
     
-    <div id="footer">
-      <p> Copyright &copy; 2012 Julius Kimuli
-      </p>
-    </div>
-  </div>
-  <div id="container_footer">&nbsp;</div>
-  <p style="float: left;padding: 0;">&nbsp;</p>
 
-</body>
+      <div class="row-fluid">
+        <div class="span5">
+          <h4 class="muted">Where  else to find me:</h4>
+          
+          <p><img src="/static/img/linkedin.jpg" width="40" height="20">&nbsp;<a href="http://ug.linkedin.com/in/jkimuli" class="links">Linkedin</a></p>
+          <p><img src="/static/img/facebook.jpg" width="40" height="20">&nbsp;<a href="http://www.facebook.com/julius.kimuli" class="links">Facebook</a></p>
+          <p><img src="/static/img/google.jpg" width="40" height="20">&nbsp;<a href="https://plus.google.com/u/0/117063591173689453940" class="links">Google</a></p>
+          
+
+          
+        </div>
+
+        <div class="span7">
+          <h4 class="muted">Links and Reading List</h4>
+          
+          <ul>
+			  <li> <a href="http://www.techcrunch.com" class="links">Tech Blog</a></li>
+			  <li> <a href="http://news.ycombinator.com" class="links">Hacker News</a></li>
+			  <li> <a href="http://news.bbc.co.uk" class="links">BBC News</a></li>
+			  <li> <a href="http://www.codeacademy.com" class="links">Codeacademy</a></li>
+			  <li> <a href="http://readerscafeafrica.com" class="links">Ugandan Writing</a></li>
+			  <li> <a href="http://cnet.com" class="links">CNET</a></li>
+          </ul>
+          
+
+          
+        </div>
+      </div>
+
+      <hr style="color:#00f">
+
+      <div class="footer pull-center">
+        <p class="p_left"> Developed with Google App Engine Python by &copy; Julius Kimuli 2013 </p>
+      </div>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    
+    
+  </body>
 </html>
