--- a/templates/career.html
+++ b/templates/career.html
@@ -1,135 +1,240 @@
-<!DOCTYPE html >
-<html >
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Julius Kimuli | Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<head>
-  <title>Julius Kimuli Home Page</title>
-  <meta name="description" content="Julius Kimuli Telecom Engineer" />
-  <meta name="keywords" content="Julius Kimuli Uganda Engineer Telecom" />
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-  
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-    
-    
-    <!-- <link href="/static/assets/css/bootstrap.css" rel="stylesheet"> -->
-    <link href="/static/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- Le styles -->
+    <link href="static/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 20px;
+        padding-bottom: 40px;
+      }
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+      /* Custom container */
+      .container-narrow {
+        margin: 0 auto;
+        max-width: 700px;
+      }
+      
+      .container-narrow > hr {
+        margin: 30px 0;
+      }
+
+      .p_left{
+		  margin-left:175px;
+	  }
+      
+    </style>
+    <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/static/assets/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/assets/ico/apple-touch-icon-57-precomposed.png">
-    
-  
-  
-  <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
-  <script type="text/javascript" src="/static/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-  <script type="text/javascript" src="/static/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-  <link rel="stylesheet" type="text/css" href="/static/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
-  
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+  </head>
 
-</head>
+  <body>
 
-<body>
-  <div id="container_header"><p>&nbsp;</p></div>
-    <div id="main">
-      <div id="header">
-        <div id="banner"></div>
-        
-      <div id="menubar">
-          <ul id="nav">
-            <li class="selected"><a href="/">Home</a></li>
-            <li><a href="/photos">Gallery</a></li>
-            <li><a href="/career">Career</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li class="last"><a href="/contact">Contacts</a></li>
-          </ul>
+    <div class="container-narrow">
+
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li ><a href="/">Home</a></li>
+          <li><a href="/photos">Gallery</a></li>
+          <li class="active"><a href="/career">Resume</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/contact">Contacts</a></li>
+        </ul>
+        <h3 class="muted">Resume</h3>
       </div>
-    </div>
-      
-    <div id="site_content">
-      <div id="content">
-        <div class="clear"></div>
-        <div class="content_item">
-          <div style="width:600px; float:right;margin-top:30px;margin-left:10px;">
-          
-          
-          <img src="/static/images/julio.jpg" width="243" height="143" alt="" class="alignleft border" />
-          
-           <p> I am Julius Kimuli an accomplished telecoms engineering professional with 4+ years experience
+
+      <hr>
+
+                
+	  
+	  <div class="row-fluid">
+		  
+		  <div class="span4">
+			  <button class="btn btn-success">Professional Profile</button>
+		  </div>
+		  
+		  <div class="span8">
+			An accomplished telecoms engineering professional with 4+ years experience
             and advanced problem solving,troubleshooting and fault analysis skills. I have been involved at  all stages of a
 			telecoms network through initial installation and deployment, operations of a live
-			network and major network and software upgrades. Technical proficiencies include...
-            Microwave Backhaul Radio Systems  both PDH and SDH Radio Alcatel-
-			Lucent AWY,MXC and MPR Radio Systems, Nera Evolution Series IP Radio
-			and Nera Interlink SDH Long Haul Radio GSM Radio Access Network Elements including Alcatel-Lucent BTS9100,
-			BSC, GRPS Nodes and Huawei BTS
- 			Huawei PTN Series 1900,950 and 3900
- 			Multi Service SDH provisioning platforms including Alcatel 1642 ADM and
-			1660 ADM
- 			Protocols : Ethernet , TCP/IP, MPLS,ATM
- 			Element and Network Management Systems and DCN
-			Configuration, Rollout,Commissioning,Integration and O&M
- 			WCDMA 3G RAN Systems
- 			
- 			<p> I am currently a Field Operations Engineer at Alcatel-Lucent East Africa, Uganda. More about me at my <a href="http://www.linkedin.com/juliuskimuli">Linkedln Profile</a>
- 			
-
-			<p>
-  			 Though a telecom engineer, I have always been fascinated by computers since my youth and  taught myself the basics of
-			programming during my university years. During my spare time i leverage my software development skillset using open source tools including
-			GNU/Linux,Python,MySQL,Django and web2py and Google App Engine Python</p>
+			network and major network and software upgrades.
 			
-			<p> When not busy at work, i do some travel and you can access my photos <a href="/photos"> here </a> , relax listening to my music catalogue and spending time with family
+			<hr/>
+		  </div>
+		  
+	  </div>
+		  
+	  <div class="row-fluid">
+		  <div class="span4">
+			  <button class="btn btn-success"> Telecom Skills</button>
+		  </div>
+		  
+		  <div class="span8">
+			<ul>
+				<li>Microwave Backhaul Radio Systems  both PDH and SDH Radio Alcatel-
+				Lucent AWY,MXC and MPR Radio Systems, Nera Evolution Series IP Radio
+				and Nera Interlink SDH Long Haul Radio</li>
+			    <li>GSM Radio Access Network Elements including Alcatel-Lucent BTS9100,
+				BSC, GRPS Nodes and Huawei BTS</li>
+				<li>Huawei PTN Series 1900,950 and 3900</li>
+				<li>Multi Service SDH provisioning platforms including Alcatel 1642 ADM and
+					1660 ADM</li>
+				<li>Protocols : Ethernet , TCP/IP, MPLS,ATM</li>
+				<li>Element and Network Management Systems and DCN
+					Configuration, Rollout,Commissioning,Integration and O&M</li>
+				<li>WCDMA 3G RAN  </li>
+			
+			</ul> 
+ 					
+ 			
+ 			<hr/>
 			  
-
-          
+		  </div>
+	  
+		  
+	  
+	  </div>
            
-         </div>
-      
-      
-        <div style="width:250px; float:left; margin-left:20px;margin-top:15px;">
-            <div style="width:200px; float:left;"><h2>Latest Updates</h2></div>
-              <br style="clear:both;" />
-        <h3>June 2012</h3>
-              <div style="width:50px; float:left;"><img src="/static/images/icons/attachment.png" alt="new"/></div>
-              <p> Learning <a href="http://www.python.org">Python</a> &nbsp;&nbsp;
-                  <a href="http://djangoproject.com">Diango Web Framework</a> &nbsp; &nbsp;
-                  <a href="http://code.google.com/appengine">Google App Engine Python</a></p>
-              
-              <div style="width:50px; float:left;"><img src="/static/images/icons/attachment.png" alt="new"/></div>    
-              <p> Just finished taking part in a prototype Online Course from <a href="http://mitx.mit.edu"> MIT </a></p>
-            <div style="width:200px; float:left;"><h2>Useful Links</h2></div>
-              <br style="clear:both;" />
-              
-        <p><img src="/static/images/icons/info.png" alt="info"/><a href="http://www.udacity.com"> Udacity Online University</a></p>
-               
-        <p><img src="/static/images/icons/info.png" alt="info"/><a href="http://news.bbc.co.uk"> BBC World News</a></p>
-               
-        <p><img src="/static/images/icons/info.png" alt="info"/>
-        <a href="http://code.google.com/appengine">Google App Engine</a></p>
-        
-        <p><img src="/static/images/icons/info.png" alt="info"/>
-        <a href="http://www.stumbleupon.com">Discover the web</a></p>
-        
-        </div>
-          <br style="clear:both;" />
-    </div>
-      </div>
-    </div>
-    
-    <div id="footer">
-      <p> Copyright &copy; 2012 Julius Kimuli
-      </p>
-    </div>
-  </div>
-  <div id="container_footer">&nbsp;</div>
-  <p style="float: left;padding: 0;">&nbsp;</p>
+ 	  <div class="row-fluid">
+		  
+		  <div class="span4">
+			<button class="btn btn-success">Computer and Software Developer Skills</button>
+			
+		  </div>
+		  
+		  <div class="span8">
+			 <ul>
+				 <li>Working Knowledge of Windows, Linux/Unix operating Systems</li>
+				 <li>Strong Database and T-SQL skills with MySQL</li>
+				 <li>Web Frontend Skills  CSS3, HTML5 and Intermediate JavaScript</li>
+				 <li>Extensive knowledge and experience implementing web application solutions using a range of Python Web Frameworks including Django, web2py and Google App Engine Python</li>
+				 <li>Programming Python and .NET Framework (C#)</li>
+				 <li>Working Knowledge of Programming Tools including the Eclipse IDE and Visual Studio 2010</li>
+				 <li>Experience using collaborative programming tools including Git and GitHub</li>
+				 <li>Beginner level mobile application development skills with the Android Platform and Java</li>
+			 </ul>
+			 
+			 <hr/>
+			  
+		  </div>
+ 	  
+ 	  
+		</div>
+		
+		<div class="row-fluid">
+			
+			<div class="span4">
+				<button class="btn btn-success">Work Experience</button>
+			
+			</div>
+			
+			<div class="span8">
+				
+						<h6 class="muted">Field Operations Engineer- Alcatel Lucent Uganda SMILE Telecom LTE Project December 2012 - todate</h6>
+					
+						
+					
+					
+				
+					
+				
+						<h6 class="muted">Field Operations Engineer-Alcatel-Lucent Uganda Orange Uganda Managed Services Project  April 2009 - November 2012</h6>
+					
+				
+						
+						
+				
+				
+				
+						<h6 class="muted">O&M Engineer  Wateen Telecom International- Warid Uganda Managed Services Project  March 2008-March 2009</h6>
+					
+						
+					
+				
+				
+						<h6 class="muted">Sunsoft Systems (U) Ltd	 Telecom Technician  -  Warid Telecom Uganda Rollout Project October 2007- Feb 2008</h6>
+					
+						
 
-</body>
+				
+			
+			</div>
+		
+		
+		
+		</div>	
+ 			
+ 	  <div class="row-fluid">
+		  <div class="span4">
+			<button class="btn btn-success">Education</button>
+		  </div>
+		  
+		  <div class="span8">
+		     <p> Bachelor of Science in Electrical Engineering, 2006
+				Makerere University, Kampala Uganda
+			 </p>
+			 
+			 <hr/>
+			 
+		  </div>
+ 	  
+ 	  
+ 	  </div>
+ 	  
+ 	  <div class="row-fluid">
+		  <div class="span4">
+			  <button class="btn btn-success"> Certifications and Training</button>
+		  </div>
+		  
+		  <div class="span8">
+			<ul>
+				<li>Nera Evolution Series PDH and Interlink SDH Radio Practical Training</li>
+
+				<li>Alcatel-Lucent BSS Product Training, Alcatel University</li>
+
+				<li>Huawei PTN Series 1900 and 3900 MPLS Router Training, Huawei University</li>
+
+				<li>Huawei Optix OSN6800 Training , Huawei University</li>
+				
+			</ul>
+		  </div>
+ 	  
+ 	  
+ 	  </div>	  
+        
+      
+
+      <hr>
+
+      <div class="footer">
+        <p class="p_left muted">Developed by Julius Kimuli &copy; 2013</p>
+      </div>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="static/js/jquery.js"></script>
+    <script src="static/js/js/bootstrap.js"></script>
+    
+
+  </body>
 </html>
