--- a/templates/photos.html
+++ b/templates/photos.html
@@ -1,52 +1,58 @@
-<!DOCTYPE html >
-<html >
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title> Gallery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-<head>
-  <title>My Photo Album</title>
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-  
-  <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
-	<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>-->
-	<script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
-	<script type="text/javascript" src="/static/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
-	<script type="text/javascript" src="/static/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-	<link rel="stylesheet" type="text/css" href="/static/fancybox/jquery.fancybox-1.3.4.css" media="screen" />
-    <script type="text/javascript" src="/static/js/jquery.pwi.js"></script>
-    <link href="/static/css/pwi.css" rel="stylesheet" type="text/css"/>
+    <!-- Le styles -->
+    <!--<link href="/static/css/bootstrap.css" rel="stylesheet">-->
+    <link href="/static/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link   href="/static/pwi/css/pwi.css" rel="stylesheet" type="text/css"/>
+    <link   href="/static/pwi/js/jquery.colorbox/colorbox.css"  media="screen" rel="stylesheet" type="text/css"/>
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="shortcut icon" href="/static/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
+      
+      
     
-    	<script type="text/javascript">
-		$(document).ready(function() {
-		
-		 $("#photo_content").pwi({
-		            username: 'jkimuli',
-		            popupExt: function(photos){ photos.fancybox(); }
-		        });
-			
-		});
-	</script>
-</head>
+  </head>
 
-<body>
-  <div id="container_header"><p>&nbsp;</p></div>
+  <body>
+   
+
+     
   <div id="main">
     
     
     <div id="header">
-    <div id="banner"></div>
+    
+	<div class="navbar">
+	  <ul class="nav nav-pills pull-right">
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="#">Gallery</a></li>
+          <li><a href="/career">Career</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/contacts">Contacts</a></li>
+        </ul>
 	
-	<div id="menubar">
-		<ul id="nav">
-			<li ><a href="/">Home</a></li>
-            <li><a href="/photos" class="selected">Gallery</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Projects</a></li>
-            <li class="last"><a href="#">Contacts</a></li>
-		</ul>
-	</div>
-	</div>
+      </div>
+	
+      </div>
         
+      <hr style="clear:both;"/>
+	
 	<!-- end #menu -->
 
 	<div id="site_content">
@@ -57,13 +63,56 @@
 	</div>
 	<!-- end #page -->
 
+	<hr />
 
 <div id="footer">
-	<div>Copyright &copy; 2012 Julius Kimuli 
-      </div>
+        
+	<div>Copyright &copy; 2012 Julius Kimuli </div>
 </div>
 <!-- end #footer -->
 
 </div>
-</body>
+	  
+	  
+        
+      
+
+    
+    
+    
+      
+      
+      
+      
+      
+      
+      
+
+    
+      
+      
+
+    
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/pwi/js/jquery.pwi.js"></script>
+    <script src="/static/pwi/js/jquery.colorbox/jquery.colorbox-min.js" type="text/javascript"></script>
+    <script src="/static/pwi/js/jquery.blockUI.js" type="text/javascript"></script>
+    
+    <script type="text/javascript">
+        $(document).ready(function() {
+           $("#photo_content").pwi({
+		            username: 'jkimuli',
+		            
+		        });
+        });
+    </script>
+    
+    
+  </body>
 </html>
