Updating index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
             <p> Hello! Iam Julius Kimuli, telecoms engineer, working with Alcatel-Lucent East Africa. I have spent the last 5 years working on projects for some of the leading Ugandan telecom operators.
             </p>
             
-            <p> I am also a budding software and web developer, since discovering and being charmed by the beauty of the Python programming language in 2009!</p>
+            <p> I am also a budding software and web developer, since discovering and being charmed by the beauty of the Python programming language !</p>
             
             <h3 class="muted"> Favorite programming arsenal</h3>
             <ul>
@@ -106,6 +106,7 @@
           <p><img src="/static/img/linkedin.jpg" width="40" height="20">&nbsp;<a href="http://ug.linkedin.com/in/jkimuli" class="links">Linkedin</a></p>
           <p><img src="/static/img/facebook.jpg" width="40" height="20">&nbsp;<a href="http://www.facebook.com/julius.kimuli" class="links">Facebook</a></p>
           <p><img src="/static/img/google.jpg" width="40" height="20">&nbsp;<a href="https://plus.google.com/u/0/117063591173689453940" class="links">Google</a></p>
+          <p><img src="/static/img/github.jpg" width="40" height="20">&nbsp;<a href="https://github.com/jkimuli" class="links">Github</a></p>
           
 
           
