updating index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,148 +2,143 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Julius Kimuli Home Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Julius Kimuli Home Page">
+    <meta name="author" content="Julius Kimuli">
+    <meta name="google-site-verification" content="WKVTQiaPVPBHON0LW96797pB6rWcBMQFuERfCem9luk" />
+    <link rel="icon" href="../../favicon.ico">
 
-    <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-        background-color: #fff;
-      }
+    <title>Julius Kimuli - Home Page</title>
 
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 800px;
-        background-color: #fff;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-         
-      a.links:hover{
-		  color:orange;
-		  text-decoration:none;
-	  }
-	  
-	  p.p_left{
-		  margin-left:200px;
-	  }
-      
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
-     
-    </style>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" type='text/css'>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/justified-nav.css" rel="stylesheet">
+    <link href="static/css/left.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="/static/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
   </head>
 
   <body>
 
-    <div class="container-narrow">
+    <div class="container">
 
+      <!-- The justified navigation menu is meant for single line per list item.
+           Multiple lines will require custom code not provided by Bootstrap. -->
       <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="/photos">Gallery</a></li>
-          <li><a href="/career">Career</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/contact">Contacts</a></li>
-        </ul>
-        <h3 class="muted">Julius Kimuli</h3>
-      </div>
-
-      <hr>
-
-      <div class="row-fluid">
         
-        <div class="span5">
-            <img src="/static/img/julio.jpg" alt="" height="400">
-        </div>
-        
-        <div class="span7">
-            <h4 class="muted">Welcome to my world!</h4>
-            <p> Hello! Iam Julius Kimuli, telecoms engineer, working with Alcatel-Lucent East Africa. I have spent the last 5 years working on projects for some of the leading Ugandan telecom operators.
-            </p>
-            
-            <p> I am also a budding software and web developer, since discovering and being charmed by the beauty of the Python programming language !</p>
-            
-            <h3 class="muted"> Favorite programming arsenal</h3>
-            <ul>
-				<li> Python and Django</li>
-				<li> Google App Engine</li>
-				<li> JQuery and HTML5</li>
-				<li> Twitter Bootstrap</li>
-            </ul>
-            
-        </div>
-        
-      </div>
-      
-      
-      <br/>
-    
-
-      <div class="row-fluid">
-        <div class="span5">
-          <h4 class="muted">Where  else to find me:</h4>
-          
-          <p><img src="/static/img/linkedin.jpg" width="40" height="20">&nbsp;<a href="http://ug.linkedin.com/in/jkimuli" class="links">Linkedin</a></p>
-          <p><img src="/static/img/facebook.jpg" width="40" height="20">&nbsp;<a href="http://www.facebook.com/julius.kimuli" class="links">Facebook</a></p>
-          <p><img src="/static/img/google.jpg" width="40" height="20">&nbsp;<a href="https://plus.google.com/u/0/117063591173689453940" class="links">Google</a></p>
-          <p><img src="/static/img/github.jpg" width="40" height="20">&nbsp;<a href="https://github.com/jkimuli" class="links">Github</a></p>
-          
-
-          
-        </div>
-
-        <div class="span7">
-          <h4 class="muted">Links and Reading List</h4>
-          
-          <ul>
-			  <li> <a href="http://www.techcrunch.com" class="links">Tech Blog</a></li>
-			  <li> <a href="http://news.ycombinator.com" class="links">Hacker News</a></li>
-			  <li> <a href="http://news.bbc.co.uk" class="links">BBC News</a></li>
-			  <li> <a href="http://www.codeacademy.com" class="links">Codeacademy</a></li>
-			  <li> <a href="http://readerscafeafrica.com" class="links">Ugandan Writing</a></li>
-			  <li> <a href="http://cnet.com" class="links">CNET</a></li>
+        <nav class='nav-color'>
+          <ul class="nav nav-justified">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="/photos">Gallery</a></li>
+            <li><a href="/career">Resume</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contact">Contacts</a></li>
           </ul>
-          
+        </nav>
+      </div>
+      
 
-          
+      <!-- Example row of columns -->
+      <div class="row">
+
+        <div class="col-md-4">
+
+          <br/> <br/>
+
+          <img src='static/img/julius.jpg' width='480' height='268' class='img-responsive img-rounded' alt='Julius Image'/>
+
         </div>
+
+        <div class="col-md-8">
+          
+          <br/> <br/>
+
+          <p> Julius Kimuli is a telecomms engineer,software developer,technology enthusiast and nature lover! </p>
+          <p> In his free time he will most likely be enjoying:</p>
+
+               <br/>
+
+               <ul style='list-type:none;'>
+
+                 <li> Programming  </li>
+                 <li> Music</li>
+                 <li> Books</li>
+                 <li> Travel</li>
+                 <li> Cricket</li>
+                 <li> Motor Rally</li>
+
+               </ul>
+
+          
+       </div>
+        
       </div>
 
-      <hr style="color:#00f">
+      <div class='row'>
 
-      <div class="footer pull-center">
-        <p class="p_left"> Developed with Google App Engine Python by &copy; Julius Kimuli 2013 </p>
+        <div class='col-md-4'>
+          <br/><br/>
+        </div>
+
+        <div class='col-md-8'>
+          <br/><br/>
+
+          <h3> Around the web </h3> <br/>
+
+          <p>
+            
+             <a href='http://www.facebook.com/julius.kimuli'>
+              <span class="fa fa-facebook fa-4x" aria='hidden'></span>
+             </a> &nbsp;&nbsp;&nbsp;&nbsp;
+
+             <a href="http://ug.linkedin.com/in/jkimuli">
+               <span class="fa fa-linkedin fa-4x" aria='hidden'></span>
+             </a> &nbsp;&nbsp;&nbsp;&nbsp;
+
+             <a href='https://twitter.com/JuliusKimuli'>
+               <span class="fa fa-twitter fa-4x" aria='hidden'></span>
+             </a> &nbsp;&nbsp;&nbsp;&nbsp;
+
+             <a href='https://github.com/jkimuli'>
+               <span class="fa fa-github fa-4x" aria='hidden'></span>
+             </a> &nbsp;&nbsp;&nbsp;&nbsp;
+
+             <a href='https://plus.google.com/u/0/117063591173689453940'>
+               <span class="fa fa-google-plus fa-4x" aria='hidden'></span>
+            </a> 
+            
+
+          </p>
+
+        </div>
+
       </div>
+
+      <!-- Site footer -->
+      <footer class="footer text-center">
+        <p>Copyright &copy; 2016 Julius Kimuli</p>
+      </footer>
 
     </div> <!-- /container -->
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    
-    
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
