--- a/templates/career.html
+++ b/templates/career.html
@@ -2,239 +2,236 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Julius Kimuli | Resume</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-    <!-- Le styles -->
-    <link href="static/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
+    <title>Julius Kimuli - Home Page</title>
 
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 700px;
-      }
-      
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
-      .p_left{
-		  margin-left:175px;
-	  }
-      
-    </style>
-    <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" type='text/css'>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    
+
+    <!-- Custom styles for this template -->
+    <link href="static/css/justified-nav.css" rel="stylesheet">
+		<link href="static/css/left.css" rel="stylesheet">
+		<link href="static/css/progress.css" rel="stylesheet"> 
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+
   </head>
 
   <body>
 
-    <div class="container-narrow">
+    <div class="container">
 
+      <!-- The justified navigation menu is meant for single line per list item.
+           Multiple lines will require custom code not provided by Bootstrap. -->
       <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li ><a href="/">Home</a></li>
-          <li><a href="/photos">Gallery</a></li>
-          <li class="active"><a href="/career">Resume</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/contact">Contacts</a></li>
-        </ul>
-        <h3 >Resume</h3>
-      </div>
-
-      <hr>
-
-                
-	  
-	  <div class="row-fluid">
-		  
-		  <div class="span4">
-			  <button class="btn btn-success">Professional Profile</button>
-		  </div>
-		  
-		  <div class="span8">
-			An accomplished telecoms engineering professional with 4+ years experience
-            and advanced problem solving,troubleshooting and fault analysis skills. I have been involved at  all stages of a
-			telecoms network through initial installation and deployment, operations of a live
-			network and major network and software upgrades.
-			
-			<hr/>
-		  </div>
-		  
-	  </div>
-		  
-	  <div class="row-fluid">
-		  <div class="span4">
-			  <button class="btn btn-success"> Telecom Skills</button>
-		  </div>
-		  
-		  <div class="span8">
-			<ul>
-				<li>Microwave Backhaul Radio Systems  both PDH and SDH Radio Alcatel-
-				Lucent AWY,MXC and MPR Radio Systems, Nera Evolution Series IP Radio
-				and Nera Interlink SDH Long Haul Radio</li>
-			    <li>GSM Radio Access Network Elements including Alcatel-Lucent BTS9100,
-				BSC, GRPS Nodes and Huawei BTS</li>
-				<li>Huawei PTN Series 1900,950 and 3900</li>
-				<li>Multi Service SDH provisioning platforms including Alcatel 1642 ADM and
-					1660 ADM</li>
-				<li>Protocols : Ethernet , TCP/IP, MPLS,ATM</li>
-				<li>Element and Network Management Systems and DCN
-					Configuration, Rollout,Commissioning,Integration and O&M</li>
-				<li>WCDMA 3G RAN  </li>
-			
-			</ul> 
- 					
- 			
- 			<hr/>
-			  
-		  </div>
-	  
-		  
-	  
-	  </div>
-           
- 	  <div class="row-fluid">
-		  
-		  <div class="span4">
-			<button class="btn btn-success">Computer and Software Developer Skills</button>
-			
-		  </div>
-		  
-		  <div class="span8">
-			 <ul>
-				 <li>Working Knowledge of Windows, Linux/Unix operating Systems</li>
-				 <li>Strong Database and T-SQL skills with MySQL</li>
-				 <li>Web Frontend Skills  CSS3, HTML5 and Intermediate JavaScript</li>
-				 <li>Extensive knowledge and experience implementing web application solutions using a range of Python Web Frameworks including Django, web2py and Google App Engine Python</li>
-				 <li>Programming Python and .NET Framework (C#)</li>
-				 <li>Working Knowledge of Programming Tools including the Eclipse IDE and Visual Studio 2010</li>
-				 <li>Experience using collaborative programming tools including Git and GitHub</li>
-				 <li>Beginner level mobile application development skills with the Android Platform and Java</li>
-			 </ul>
-			 
-			 <hr/>
-			  
-		  </div>
- 	  
- 	  
-		</div>
-		
-		<div class="row-fluid">
-			
-			<div class="span4">
-				<button class="btn btn-success">Work Experience</button>
-			
-			</div>
-			
-			<div class="span8">
-				
-						<p>Field Operations Engineer- Alcatel Lucent Uganda SMILE Telecom LTE Project December 2012 - todate</p>
-					
-						
-					
-					
-				
-					
-				
-						<p>Field Operations Engineer-Alcatel-Lucent Uganda Orange Uganda Managed Services Project  April 2009 - November 2012</p>
-					
-				
-						
-						
-				
-				
-				
-						<p>O&M Engineer  Wateen Telecom International- Warid Uganda Managed Services Project  March 2008-March 2009</p>
-					
-						
-					
-				
-				
-						<p>Sunsoft Systems (U) Ltd	 Telecom Technician  -  Warid Telecom Uganda Rollout Project October 2007- Feb 2008</p>
-					
-						
-
-				
-			
-			</div>
-		
-		
-		
-		</div>	
- 			
- 	  <div class="row-fluid">
-		  <div class="span4">
-			<button class="btn btn-success">Education</button>
-		  </div>
-		  
-		  <div class="span8">
-		     <p> Bachelor of Science in Electrical Engineering, 2006
-				Makerere University, Kampala Uganda
-			 </p>
-			 
-			 <hr/>
-			 
-		  </div>
- 	  
- 	  
- 	  </div>
- 	  
- 	  <div class="row-fluid">
-		  <div class="span4">
-			  <button class="btn btn-success"> Certifications and Training</button>
-		  </div>
-		  
-		  <div class="span8">
-			<ul>
-				<li>Nera Evolution Series PDH and Interlink SDH Radio Practical Training</li>
-
-				<li>Alcatel-Lucent BSS Product Training, Alcatel University</li>
-
-				<li>Huawei PTN Series 1900 and 3900 MPLS Router Training, Huawei University</li>
-
-				<li>Huawei Optix OSN6800 Training , Huawei University</li>
-				
-			</ul>
-		  </div>
- 	  
- 	  
- 	  </div>	  
         
+        <nav class='nav-color'>
+          <ul class="nav nav-justified">
+            <li><a href="/">Home</a></li>
+            <li><a href="/photos">Gallery</a></li>
+            <li class="active"><a href="/career">Resume</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contact">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
       
 
-      <hr>
+      <!-- Example row of columns -->
+      <div class="row">
 
-      <div class="footer">
-        <p class="p_left muted">Developed by Julius Kimuli &copy; 2013</p>
+        <div class="col-md-4">
+
+          <br/> <br/>
+
+          <div class='row'>
+						  <div class='panel'>
+							<img src='static/img/kimuli.jpg' width='100' height='100'  class='img-thumbnail img-circle' alt='Julius Image'/>
+							<h4> Julius Kimuli </h4>
+							<h4> Telecoms Engineer | Software Developer </h4>
+							</div>
+					</div>
+
+					<div class='row'>
+
+						 <div class="panel panel-info">
+								<div class="panel-heading">
+									
+									<h3 class="panel-title"><span class="fa fa-user"></span>  &nbsp;&nbsp;Summary</h3>
+									
+								</div>
+								<div class="panel-body">
+									
+											<p>Experienced telecoms engineering professional with extensive knowledge of GSM/WCDMA/LTE networks 
+												
+												SDH/PDH microwave systems and  packet transport systems.</p>
+
+											<p>I have been actively involved in the installation, field deployment and maintenance, commissioning and integration of network elements </p>
+											 <p>while working within highly multicultural teams under tight deadlines and strict adherence to pre-agreed service level agreements.</p>
+
+								</div>
+							</div>
+
+					</div>
+
+					<div class='row'>
+
+						 <div class="panel panel-info">
+								<div class="panel-heading">
+									<h3 class="panel-title"> <span class="fa fa-vcard"></span>  &nbsp;&nbsp;Contact Information</h3>
+								</div>
+								<div class="panel-body">
+									
+                   <p><span class="fa fa-phone"></span>  &nbsp;&nbsp; +256 791448850 </p>
+									 <p> <span class="fa fa-envelope"></span>  &nbsp;&nbsp; jkimuli@gmail.com </p>
+								</div>
+							</div>
+
+					</div>
+
+					<div class='row'>
+
+						<a href='static/files/cv.pdf' role='button' class='btn btn-info' download>Download CV </a>
+
+
+						</div>
+
+
+
+        </div>
+
+
+
+        <div class="col-md-8 left-panel">
+          
+          <br/> <br/>
+
+					<div class='row'>
+
+						 <div class="panel panel-info">
+								<div class="panel-heading">
+									<h3 class="panel-title"> <span class="fa fa-wrench"></span>  &nbsp;&nbsp;Work Experiences</h3>
+								</div>
+								<div class="panel-body">
+
+								<h4>Field Operations Engineer - Nokia Uganda ( Jan 2016 - to date ) </h4>
+
+	              <p> Core responsibilities involve:
+									 <ul>
+										 <li> Supervision of subcontractor teams during field network deployments</li>
+									    <li>Commissioning and integration of network elements.</li>
+										</ul>
+								</p>
+
+                <h4> Field Operations Engineer - Alcatel Lucent South Africa Uganda Branch (April 	2009 - Jan 2016 )</h4>
+                <p> Core responsibilities included:
+									  <ul>
+											<li> 1st Level Field Operations support,troubleshooting and network fault management</li>
+											<li> Supervision of subcontractors during network deployments</li>
+											<li> Commissioning and Integration of network elements</li>
+										</ul>
+								</p>
+								<p> On a range of projects with different telecom operators including Orange Uganda,Smile Communications Uganda,Smile Communications Tanzania
+									  Airtel Kenya and Orange Cameroun </p>
+
+
+                <h4>Operations and Maintenance Engineer -  Warid Telecom Uganda  (March 2008 - March 2009)</h4>
+								  <ul>
+											<li> 1st Level Field Operations support,troubleshooting and network fault management</li>
+									</ul>
+
+
+								</div>
+							</div>
+
+					</div>
+
+					<div class='row'>
+
+						 <div class="panel panel-info">
+								<div class="panel-heading">
+									<h3 class="panel-title"> <span class="fa fa-briefcase"></span>  &nbsp;&nbsp;Professional Skills</h3>
+								</div>
+								<div class="panel-body">
+									
+									 <p> Linux Systems Administration &nbsp;&nbsp;
+										  <progress class='pull-right' max='1.0' value='0.6'></progress>
+									  </p>
+
+										<p> GSM/WCDMA/LTE Commissioning and Integration &nbsp;&nbsp;
+										  <progress class='pull-right'  max='1.0' value='0.9'></progress>
+									  </p>
+
+										<p> Python/Django Programming &nbsp;&nbsp;
+										  <progress class='pull-right' max='1.0' value='0.7'></progress>
+									  </p>
+
+										<p> HTML5 and CSS3 &nbsp;&nbsp;
+										  <progress class='pull-right' max='1.0' value='0.5'></progress>
+									  </p>
+
+										<p> Android Mobile Development &nbsp;&nbsp;
+										  <progress  class='pull-right' max='1.0' value='0.3'></progress>
+									  </p>
+
+
+
+
+								</div>
+							</div>
+
+					</div>
+
+					<div class='row'>
+
+						 <div class="panel panel-info">
+								<div class="panel-heading">
+									<h3 class="panel-title"> <span class="fa fa-graduation-cap"></span>  &nbsp;&nbsp;Education and Certifications</h3>
+								</div>
+								<div class="panel-body">
+									<p> Comptia Linux+ Certification </p>
+									<p> Linux Professional Institute Systems Administrator Certification - LPIC Level I </p>
+									<p> Alcatel-Lucent Network Routing Specialist Level I </p>
+									<p> Bsc Electrical Engineering - Makerere University Kampala Uganda </p>
+								</div>
+							</div>
+
+					</div>
+
+          
+       </div>
+        
       </div>
+
+      
+      <!-- Site footer -->
+      <footer class="footer text-center">
+        <p>Copyright &copy; 2016 Julius Kimuli</p>
+      </footer>
 
     </div> <!-- /container -->
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/js/bootstrap.js"></script>
-    
 
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
