--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -2,97 +2,144 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Julius Kimuli Home Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Julius Kimuli Home Page">
+    <meta name="author" content="Julius Kimuli">
+    <meta name="google-site-verification" content="WKVTQiaPVPBHON0LW96797pB6rWcBMQFuERfCem9luk" />
+    <link rel="icon" href="../../favicon.ico">
 
-    <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-        background-color: #fff;
-      }
+    <title>Julius Kimuli - Home Page</title>
 
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 800px;
-        background-color: #fff;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-      
-    </style>
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" type='text/css'>
+
     
-   <body>
-	   
-	   <div class="container-narrow">
 
+    <!-- Custom styles for this template -->
+    <link href="static/css/justified-nav.css" rel="stylesheet">
+    <link href="static/css/left.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="container">
+
+      <!-- The justified navigation menu is meant for single line per list item.
+           Multiple lines will require custom code not provided by Bootstrap. -->
       <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li ><a href="/">Home</a></li>
-          <li><a href="/photos">Gallery</a></li>
-          <li><a href="/career">Career</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li  class="active"><a href="#">Contacts</a></li>
-        </ul>
         
-        <br/>
-        
+        <nav class='nav-color'>
+          <ul class="nav nav-justified">
+            <li><a href="/">Home</a></li>
+            <li><a href="/photos">Gallery</a></li>
+            <li><a href="/career">Resume</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li class="active"><a href="/contact">Contacts</a></li>
+          </ul>
+        </nav>
       </div>
-
-       <hr style="width:800px;"/ >
-     
       
+
+      <!-- Example row of columns -->
       <div class="row">
-		  
-		  <div class="span12">
-			  
-			  <form method="post" action=".">
-				  
-				  <label for="name">Name</label>
-				  <input type="text" id="name" name="name" placeholder="Your Name" required/>
-				  
-				  <label for="email">Email</label>
-				  <input type="email" id="email" name="email" placeholder="mail@example.com" required/>
-				  
-				  <label for="message">Message</label>
-				  <textarea cols=20 rows=5 id="message" name="message"></textarea>
-				  
-				  <br /> <br/>
 
-				  
-				  <input type="submit" value="Submit" class="btn btn=submit"/>
-			  
-			  
-			  </form>
-		  
-		  
-		  </div>
-      </div>
-      
-      
-      <hr style="color:#00f">
+        <div class="col-md-6">
 
-      <div class="footer pull-center">
-        <p class="p_left"> Developed with Google App Engine Python by &copy; Julius Kimuli 2013 </p>
-      </div>
+          <br/> 
+          
+          <form id="contact-form" method="post" action=" " role="form">
+
+           <div class="messages"></div>
+
+                <div class="controls">
+
+                  <div class="row">
+                <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_name">Firstname *</label>
+                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_lastname">Lastname *</label>
+                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_email">Email *</label>
+                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="form_phone">Phone</label>
+                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Please enter your phone">
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="form_message">Message *</label>
+                    <textarea id="form_message" name="message" class="form-control" placeholder="Message for me *" rows="4" required="required" data-error="Please,leave us a message."></textarea>
+                    <div class="help-block with-errors"></div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <input type="submit" class="btn btn-success btn-send" value="Send message">
+            </div>
+        </div>
+        <br/>
+
+        <div class="row">
+            <div class="col-md-12">
+                <p class="text-muted"><strong>*</strong> These fields are required.</p>
+            </div>
+        </div>
+    </div>
+
+</form>
+                    
+                   
+
+        </div>
+
+        <div class='col-md-6'>
+
+          </div>
+
+      </div>  
+      <!-- Site footer -->
+      <footer class="footer text-center">
+        <p>Copyright &copy; 2016 Julius Kimuli</p>
+      </footer>
 
     </div> <!-- /container -->
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
-    
-   
-   
-   </body>
-   
-   </html>
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+</html>
