--- a/templates/photos.html
+++ b/templates/photos.html
@@ -2,113 +2,103 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title> Gallery</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
 
-    <!-- Le styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <title>Julius Kimuli - Gallery</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="static/font-awesome/css/font-awesome.min.css" type='text/css'>
+
     <link href="/static/fancyBox/jquery.fancybox.css?v=2.0.5" rel="stylesheet" type="text/css" media="screen" />
     <link href="/static/jquery.picasagallery.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="/static/fancyBox/helpers/jquery.fancybox-thumbs.css?v=2.0.5" rel="stylesheet" type="text/css" media="screen" />
+    
 
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-        background-color: #fff;
-      }
+    <!--<link href="static/nanogallery/css/nanogallery.min.css" rel="stylesheet" type="text/css">-->
+    
 
-      /* Custom container */
-      .container-narrow {
-        margin: 0 auto;
-        max-width: 800px;
-        background-color: #fff;
-      }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
-         
-      a.links:hover{
-		  color:orange;
-		  text-decoration:none;
-	  }
-	  
-	  p.p_left{
-		  margin-left:200px;
-	  }
-      
+    <!-- Custom styles for this template -->
+    <link href="static/css/justified-nav.css" rel="stylesheet">
 
-     
-    </style>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
 
-   
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="/static/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png">
   </head>
 
   <body>
 
-    <div class="container-narrow">
+    <div class="container">
 
+      <!-- The justified navigation menu is meant for single line per list item.
+           Multiple lines will require custom code not provided by Bootstrap. -->
       <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="/">Home</a></li>
-          <li class="active"><a href="/photos">Gallery</a></li>
-          <li><a href="/career">Resume</a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/contact">Contacts</a></li>
-        </ul>
-        <h3 class="muted">Julius Kimuli</h3>
+        
+        <nav class='nav-color'>
+          <ul class="nav nav-justified">
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/photos">Gallery</a></li>
+            <li><a href="/career">Resume</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/contact">Contacts</a></li>
+          </ul>
+        </nav>
       </div>
+      
 
-      <hr>
-
-      <div class="row-fluid">
-		  
-		  <div class="span-12">
-			  
-			  <div class='gallery'></div>
-		  
-		  </div>
+      <!-- Example row of columns -->
+      <div class="row">
+         <br/> <br/>
+         <div class='gallery'></div>
         
       </div>
 
-      <hr style="color:#00f">
-
-      <div class="footer pull-center">
-        <p class="p_left"> Developed with Google App Engine Python by &copy; Julius Kimuli 2013 </p>
-      </div>
+      
+      <!-- Site footer -->
+      <footer class="footer text-center">
+        <p>Copyright &copy; 2016 Julius Kimuli</p>
+      </footer>
 
     </div> <!-- /container -->
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/bootstrap.js"></script>
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
 
     <script src="/static/fancyBox/jquery.fancybox.pack.js?v=2.0.5" type="text/javascript"></script>
-        <script src="/static/fancyBox/helpers/jquery.fancybox-thumbs.js?v=2.0.5" type="text/javascript"></script>
-        <script src="/static/jquery.picasagallery.js" type="text/javascript"></script>
-        <script type="text/javascript">
+    <script src="/static/fancyBox/helpers/jquery.fancybox-thumbs.js?v=2.0.5" type="text/javascript"></script>
+    <script src="/static/jquery.picasagallery.js" type="text/javascript"></script>
+    <script type="text/javascript">
             $(document).ready(function() { $('.gallery').picasagallery({username:'jkimuli',title:' '}); } );
-        </script>
+    </script>
 
+    <!--<script type="text/javascript" src="static/nanogallery/jquery.nanogallery.min.js"></script>
 
-    
-</body>
+    <script type="text/javascript">
+
+    $(document).ready(function () {
+      $(".gallery").nanoGallery({
+          kind: 'picasa',
+          userID: '117063591173689453940'
+      });
+     });
+
+    </script> -->
+  
+
+  </body>
 </html>
