update main app python

--- a/templates/career.html
+++ b/templates/career.html
@@ -110,7 +110,7 @@
 
 					<div class='row'>
 
-						<a href='static/files/cv.pdf' role='button' class='btn btn-info' download>Download CV </a>
+						<a href='static/files/cv.doc' role='button' class='btn btn-info' download>Download CV </a>
 
 
 						</div>
@@ -150,7 +150,7 @@
 											<li> Commissioning and Integration of network elements</li>
 										</ul>
 								</p>
-								<p> On a range of projects with different telecom operators including Orange Uganda,Smile Communications Uganda,Smile Communications Tanzania
+								<p> On a range of projects with different telecom operators including Orange Uganda,Smile Communications Uganda,Smile Communications Tanzania,
 									  Airtel Kenya and Orange Cameroun </p>
 
 
