Changing home page

--- a/templates/career.html
+++ b/templates/career.html
@@ -67,7 +67,7 @@
 						  <div class='panel'>
 							<img src='static/img/kimuli.jpg' width='100' height='100'  class='img-thumbnail img-circle' alt='Julius Image'/>
 							<h4> Julius Kimuli </h4>
-							<h4> Telecoms Engineer | Software Developer </h4>
+							<h4> Telecoms Engineer | Web Developer </h4>
 							</div>
 					</div>
 
