--- a/static/css/justified-nav.css
+++ b/static/css/justified-nav.css
@@ -25,7 +25,7 @@ body {
 
 
 .nav-justified {
-  background-color: #eee;
+  background-color: #00cc99;
   border: 1px solid #ccc;
   border-radius: 5px;
 }
