--- a/templates/index.html
+++ b/templates/index.html
@@ -25,13 +25,11 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="static/js/ie-emulation-modes-warning.js"></script>
+    
+    
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    
+
   </head>
 
   <body>
@@ -61,7 +59,7 @@
 
           <br/> <br/>
 
-          <img src='static/img/julius.jpg' width='480' height='268' class='img-responsive img-rounded' alt='Julius Image'/>
+          <img src='static/img/julio.jpg' width='480' height='268' class='img-responsive img-rounded' alt='Julius Image'/>
 
         </div>
 
@@ -69,21 +67,13 @@
           
           <br/> <br/>
 
-          <p> Julius Kimuli is a telecomms engineer,software developer,technology enthusiast and nature lover! </p>
-          <p> In his free time he will most likely be enjoying:</p>
+          <p> Hi!, welcome to my personal website. I am Julius Kimuli from Kampala Uganda - a telecommunications engineer, web developer and technology enthusiast. </p>
 
-               <br/>
+          <p> My current station is Nokia Networks Uganda - where i majorly focus on <blockquote> springing networks into life!</blockquote> </p>
 
-               <ul style='list-type:none;'>
-
-                 <li> Programming  </li>
-                 <li> Music</li>
-                 <li> Books</li>
-                 <li> Travel</li>
-                 <li> Cricket</li>
-                 <li> Motor Rally</li>
-
-               </ul>
+          <p> 
+          </p>
+   
 
           
        </div>
@@ -99,7 +89,7 @@
         <div class='col-md-8'>
           <br/><br/>
 
-          <h3> Around the web </h3> <br/>
+          <h3> Around the web</h3> <br/>
 
           <p>
             
@@ -132,13 +122,35 @@
 
       <!-- Site footer -->
       <footer class="footer text-center">
-        <p>Copyright &copy; 2016 Julius Kimuli</p>
+        <p> Copyright &nbsp; &copy; &nbsp;<span id="year"></span> - Julius Kimuli </p>
+        
       </footer>
 
     </div> <!-- /container -->
 
 
+    <script src="static/js/ie-emulation-modes-warning.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+
+    <script type="text/javascript">
+
+      var currentYear = (new Date).getFullYear();
+
+      $(document).ready(function() {
+      $("#year").text( (new Date).getFullYear() );
+
+      });
+
+
+      
+    </script>
+    
+
+    
+
   </body>
 </html>
