--- a/templates/career.html
+++ b/templates/career.html
@@ -81,12 +81,11 @@
 								</div>
 								<div class="panel-body">
 									
-											<p>Experienced telecoms engineering professional with extensive knowledge of GSM/WCDMA/LTE networks 
-												
-												SDH/PDH microwave systems and  packet transport systems.</p>
+											<p>Experienced telecoms engineering professional with extensive knowledge of GSM/WCDMA/LTE networks, SDH/PDH microwave systems and packet transport systems.</p>
 
-											<p>I have been actively involved in the installation, field deployment and maintenance, commissioning and integration of network elements </p>
-											 <p>while working within highly multicultural teams under tight deadlines and strict adherence to pre-agreed service level agreements.</p>
+											<p>I have been actively involved in the installation, field deployment and maintenance, commissioning and integration of network elements  while working within highly multicultural teams under tight deadlines and strict adherence to pre-agreed service level agreements.</p>
+
+											<p> I am also a largely self taught web developer who enjoys hacking on Python and Java </p>
 
 								</div>
 							</div>
@@ -101,7 +100,7 @@
 								</div>
 								<div class="panel-body">
 									
-                   <p><span class="fa fa-phone"></span>  &nbsp;&nbsp; +256 791448850 </p>
+                   <p><span class="fa fa-phone"></span>  &nbsp;&nbsp; +256 773383035 </p>
 									 <p> <span class="fa fa-envelope"></span>  &nbsp;&nbsp; jkimuli@gmail.com </p>
 								</div>
 							</div>
@@ -173,8 +172,8 @@
 								</div>
 								<div class="panel-body">
 									
-									 <p> Linux Systems Administration &nbsp;&nbsp;
-										  <progress class='pull-right' max='1.0' value='0.6'></progress>
+									 <p> Linux Systems and Network Administration &nbsp;&nbsp;
+										  <progress class='pull-right' max='1.0' value='0.8'></progress>
 									  </p>
 
 										<p> GSM/WCDMA/LTE Commissioning and Integration &nbsp;&nbsp;
@@ -185,11 +184,11 @@
 										  <progress class='pull-right' max='1.0' value='0.7'></progress>
 									  </p>
 
-										<p> HTML5 and CSS3 &nbsp;&nbsp;
+										<p> Frontend Web Development - HTML5, JavaScript and CSS3 &nbsp;&nbsp;
 										  <progress class='pull-right' max='1.0' value='0.5'></progress>
 									  </p>
 
-										<p> Android Mobile Development &nbsp;&nbsp;
+										<p> Java and  Spring MVC Web Development &nbsp;&nbsp;
 										  <progress  class='pull-right' max='1.0' value='0.3'></progress>
 									  </p>
 
