--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Julius Kimuli Home Page">
     <meta name="author" content="Julius Kimuli">
     <meta name="google-site-verification" content="WKVTQiaPVPBHON0LW96797pB6rWcBMQFuERfCem9luk" />
+    <meta name="msvalidate.01" content="D7F62CCC7F61A1D5A06FCD7B515CF920" />
     <link rel="icon" href="../../favicon.ico">
 
     <title>Julius Kimuli - Home Page</title>
@@ -67,11 +68,14 @@
           
           <br/> <br/>
 
+          <h4><span style="text-decoration:underline;"> Me talking about myself, Phew! </span></h4>
+
           <p> Hi!, welcome to my personal website. I am Julius Kimuli from Kampala Uganda - a telecommunications engineer, web developer and technology enthusiast. </p>
 
-          <p> My current station is Nokia Networks Uganda - where i majorly focus on <blockquote> springing networks into life!</blockquote> </p>
+          <p> My current station is Nokia Networks Uganda - where i majorly focus on <blockquote> springing telecom networks into life!</blockquote> </p>
 
           <p> 
+              I enjoy everything computers,tech,books and highly appreciative of awesome photography. Occassionally i will be out enjoying an odd game of cricket or appreciating the world in its natural state.
           </p>
    
 
